--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./components/head.js"></script>
   </head>
 
-  <body class="fixed-header dashboard menu-pin menu-behind">
+  <body class="fixed-header dashboard">
     <!--SIDEBPANEL-->
     <script src="./components/sidepanal.js"></script>
 
