--- a/login.html
+++ b/login.html
@@ -8,7 +8,59 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
     />
-    <script src="./components/head.js"></script>
+    <link rel="apple-touch-icon" href="pages/ico/60.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="pages/ico/152.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta
+      content="Meet pages - The simplest and fastest way to build web UI for your dashboard or app."
+      name="description"
+    />
+    <meta content="Ace" name="author" />
+    <link
+      href="assets/plugins/pace/pace-theme-flash.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="assets/plugins/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="assets/plugins/jquery-scrollbar/jquery.scrollbar.css"
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+    />
+    <link
+      href="assets/plugins/select2/css/select2.min.css"
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+    />
+    <link
+      class="main-stylesheet"
+      href="pages/css/themes/corporate.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="./assets/custom/login.css" />
+    <!-- Please remove the file below for production: Contains demo classes -->
+    <link
+      class="main-stylesheet"
+      href="assets/css/style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script type="text/javascript">
       window.onload = function () {
         // fix for windows 8
@@ -18,6 +70,7 @@
       };
     </script>
   </head>
+
   <body class="fixed-header menu-pin menu-behind">
     <div class="login-wrapper">
       <!-- START Login Background Pic Wrapper-->
@@ -43,10 +96,10 @@
       <div class="login-container bg-white">
         <div class="p-l-50 p-r-50 p-t-50 m-t-30 sm-p-l-15 sm-p-r-15 sm-p-t-40">
           <img
-            src="assets/img/logo-48x48_c.png"
+            src="assets/img/logo-full.png"
             alt="logo"
-            data-src="assets/img/logo-48x48_c.png"
-            data-src-retina="assets/img/logo-48x48_c@2x.png"
+            data-src="assets/img/logo-full.png"
+            data-src-retina="assets/img/logo-full.png"
             width="48"
             height="48"
           />
