--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,7 @@
     <script src="./components/head.js"></script>
   </head>
 
-  <body class="fixed-header menu-pin menu-behind">
+  <body class="fixed-header">
     <!-- SIDEPANEL -->
     <script src="./components/sidepanal.js"></script>
 
