--- a/view-tickets.html
+++ b/view-tickets.html
@@ -9,9 +9,10 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"
     />
     <script src="./components/head.js"></script>
+    <link rel="stylesheet" href="./assets/custom/tickets.css" />
   </head>
 
-  <body class="fixed-header menu-pin menu-behind">
+  <body class="fixed-header">
     <!--SIDEBPANEL-->
     <script src="./components/sidepanal.js"></script>
 
@@ -107,7 +108,7 @@
                             </div>
                             <div class="inline m-l-10">
                               <p class="small hint-text m-t-5">
-                                VIA senior product manage <br />for UI/UX at
+                                VIA senior product manager <br />for UI/UX at
                                 REVOX
                               </p>
                             </div>
@@ -152,6 +153,7 @@
     <!-- END PAGE CONTAINER -->
 
     <!-- <script src="assets/js/tickets.js"></script> -->
+    <script src="./assets/js/auth.js"></script>
     <script src="./assets/js/tickets.js"></script>
     <!-- BEGIN VENDOR JS -->
     <script src="./components/scripts.js"></script>
