--- a/register.html
+++ b/register.html
@@ -53,6 +53,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="stylesheet" href="./assets/custom/login.css" />
     <!-- Please remove the file below for production: Contains demo classes -->
     <link
       class="main-stylesheet"
@@ -87,7 +88,8 @@
           <a href="#" class="text-info">Facebook</a> or
           <a href="#" class="text-info">Google</a>
         </p>
-        <form id="form-register" class="p-t-15" role="form" action="index.html">
+        <p class="mw-80 hidden" id="error-message"></p>
+        <form id="form-register" class="p-t-15" role="form">
           <div class="row">
             <div class="col-md-12">
               <div class="form-group form-group-default">
@@ -95,8 +97,9 @@
                 <input
                   type="text"
                   name="fname"
-                  placeholder="John"
+                  placeholder="John Doe"
                   class="form-control"
+                  id="name"
                   required
                 />
               </div>
@@ -110,11 +113,13 @@
                 <input
                   type="email"
                   name="email"
-                  placeholder="We will send loging details to you"
+                  placeholder="johndoe@example.com"
                   class="form-control"
+                  id="email"
                   required
                 />
               </div>
+              <span id="invalid-email"></span>
             </div>
           </div>
 
@@ -127,6 +132,7 @@
                   name="pass"
                   placeholder="Minimum of 4 Charactors"
                   class="form-control"
+                  id="password"
                   required
                 />
               </div>
@@ -136,13 +142,13 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group form-group-default">
-                <label>Pages User name</label>
+                <label>Phone Number</label>
                 <input
-                  type="text"
+                  type="number"
                   name="uname"
-                  placeholder="yourname.pages.com (this can be changed later)"
+                  placeholder="0901 101 0010"
                   class="form-control"
-                  required
+                  id="phonenumber"
                 />
               </div>
             </div>
@@ -152,7 +158,7 @@
               <p>
                 <small
                   >I agree to the
-                  <a href="#" class="text-info">Pages Terms</a> and
+                  <a href="#" class="text-info">Waarii Terms</a> and
                   <a href="#" class="text-info">Privacy</a>.</small
                 >
               </p>
@@ -163,11 +169,15 @@
           </div>
           <button
             aria-label=""
+            id="sign-in-btn"
             class="btn btn-primary btn-cons m-t-10"
             type="submit"
           >
             Create a new account
           </button>
+          <p class="hidden sign-in-text" id="sign-in-text">
+            Creating account...
+          </p>
         </form>
       </div>
     </div>
@@ -195,272 +205,9 @@
         </div>
       </div>
     </div>
-    <!-- START OVERLAY -->
-    <div class="overlay hide" data-pages="search">
-      <!-- BEGIN Overlay Content !-->
-      <div class="overlay-content has-results m-t-20">
-        <!-- BEGIN Overlay Header !-->
-        <div class="container-fluid">
-          <!-- BEGIN Overlay Logo !-->
-          <img
-            class="overlay-brand"
-            src="assets/img/logo.png"
-            alt="logo"
-            data-src="assets/img/logo.png"
-            data-src-retina="assets/img/logo_2x.png"
-            width="78"
-            height="22"
-          />
-          <!-- END Overlay Logo !-->
-          <!-- BEGIN Overlay Close !-->
-          <a
-            href="#"
-            class="
-              close-icon-light
-              btn-link btn-rounded
-              overlay-close
-              text-black
-            "
-          >
-            <i class="pg-icon">close</i>
-          </a>
-          <!-- END Overlay Close !-->
-        </div>
-        <!-- END Overlay Header !-->
-        <div class="container-fluid">
-          <!-- BEGIN Overlay Controls !-->
-          <input
-            id="overlay-search"
-            class="no-border overlay-search bg-transparent"
-            placeholder="Search..."
-            autocomplete="off"
-            spellcheck="false"
-          />
-          <br />
-          <div class="d-flex align-items-center">
-            <div class="form-check right m-b-0">
-              <input id="checkboxn" type="checkbox" value="1" />
-              <label for="checkboxn">Search within page</label>
-            </div>
-            <p class="fs-13 hint-text m-l-10 m-b-0">Press enter to search</p>
-          </div>
-          <!-- END Overlay Controls !-->
-        </div>
-        <!-- BEGIN Overlay Search Results, This part is for demo purpose, you can add anything you like !-->
-        <div class="container-fluid p-t-20">
-          <span class="hint-text"> suggestions : </span>
-          <span class="overlay-suggestions"></span>
-          <br />
-          <div class="search-results m-t-30">
-            <p class="bold">
-              Pages Search Results: <span class="overlay-suggestions"></span>
-            </p>
-            <div class="row">
-              <div class="col-md-6">
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="thumbnail-wrapper d48 circular bg-success text-white"
-                  >
-                    <img
-                      width="36"
-                      height="36"
-                      src="assets/img/profiles/avatar.jpg"
-                      data-src="assets/img/profiles/avatar.jpg"
-                      data-src-retina="assets/img/profiles/avatar2x.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      <span class="semi-bold result-name">ice cream</span> on
-                      pages
-                    </h5>
-                    <p class="small-text hint-text">via john smith</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="thumbnail-wrapper d48 circular bg-success text-white"
-                  >
-                    <div>T</div>
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      <span class="semi-bold result-name">ice cream</span>
-                      related topics
-                    </h5>
-                    <p class="small-text hint-text">via pages</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="thumbnail-wrapper d48 circular bg-success text-white"
-                  >
-                    <div>M</div>
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      <span class="semi-bold result-name">ice cream</span> music
-                    </h5>
-                    <p class="small-text hint-text">via pagesmix</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-              </div>
-              <div class="col-md-6">
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="
-                      thumbnail-wrapper
-                      d48
-                      circular
-                      bg-info
-                      text-white
-                      d-flex
-                      align-items-center
-                    "
-                  >
-                    <i class="pg-icon">facebook</i>
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      <span class="semi-bold result-name">ice cream</span> on
-                      facebook
-                    </h5>
-                    <p class="small-text hint-text">via facebook</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="
-                      thumbnail-wrapper
-                      d48
-                      circular
-                      bg-complete
-                      text-white
-                      d-flex
-                      align-items-center
-                    "
-                  >
-                    <i class="pg-icon">twitter</i>
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      Tweats on<span class="semi-bold result-name">
-                        ice cream</span
-                      >
-                    </h5>
-                    <p class="small-text hint-text">via twitter</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-                <!-- BEGIN Search Result Item !-->
-                <div class="d-flex m-t-15">
-                  <!-- BEGIN Search Result Item Thumbnail !-->
-                  <div
-                    class="
-                      thumbnail-wrapper
-                      d48
-                      circular
-                      text-white
-                      bg-danger
-                      d-flex
-                      align-items-center
-                    "
-                  >
-                    <i class="pg-icon">google_plus</i>
-                  </div>
-                  <!-- END Search Result Item Thumbnail !-->
-                  <div class="p-l-10">
-                    <h5 class="no-margin">
-                      Circles on<span class="semi-bold result-name">
-                        ice cream</span
-                      >
-                    </h5>
-                    <p class="small-text hint-text">via google plus</p>
-                  </div>
-                </div>
-                <!-- END Search Result Item !-->
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- END Overlay Search Results !-->
-      </div>
-      <!-- END Overlay Content !-->
-    </div>
-    <!-- END OVERLAY -->
+
     <!-- BEGIN VENDOR JS -->
-    <script
-      src="assets/plugins/pace/pace.min.js"
-      type="text/javascript"
-    ></script>
-    <!--  A polyfill for browsers that don't support ligatures: remove liga.js if not needed-->
-    <script src="assets/plugins/liga.js" type="text/javascript"></script>
-    <script
-      src="assets/plugins/jquery/jquery-3.2.1.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/modernizr.custom.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/jquery-ui/jquery-ui.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/popper/umd/popper.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/bootstrap/js/bootstrap.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/jquery/jquery-easy.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/jquery-unveil/jquery.unveil.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="assets/plugins/jquery-ios-list/jquery.ioslist.min.js"
-      type="text/javascript"
-    ></script>
-    <script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
-    <script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-    <script
-      type="text/javascript"
-      src="assets/plugins/select2/js/select2.full.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="assets/plugins/classie/classie.js"
-    ></script>
-    <script
-      src="assets/plugins/jquery-validation/js/jquery.validate.min.js"
-      type="text/javascript"
-    ></script>
+    <script src="./components/scripts.js"></script>
     <!-- END VENDOR JS -->
     <script src="pages/js/pages.min.js"></script>
     <script src="./assets/js/auth.js"></script>
