--- a/sass_80Pages/tickets.html
+++ b/sass_80Pages/tickets.html
@@ -154,7 +154,10 @@
           </div>
           <!-- END JUMBOTRON -->
           <!-- START CONTAINER FLUID -->
-          <div class="container-fluid container-fixed-lg bg-white">
+          <div
+            class="container-fluid container-fixed-lg bg-white"
+            style="margin-bottom: 30px"
+          >
             <!-- START card -->
             <div class="card card-transparent">
               <div class="card-header">
@@ -188,68 +191,77 @@
                   ></button>
                   <strong id="successAlertDiv"> </strong>
                 </div>
-              </div>
-              <!-- Table End here -->
 
-              <!-- Delete FAQ Modal starts here -->
-              <div
-                class="modal fade"
-                id="deleteModalCenter"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="deleteModalCenterTitle"
-                aria-hidden="true"
-              >
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="deleteModalCenterTitle"></h5>
-                      <button
-                        type="button"
-                        class="close"
-                        data-dismiss="modal"
-                        aria-label="Close"
-                        id="selfClickedButton"
-                      >
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div
-                      class="modal-body signingMessage"
-                      id="deleteModalMessage"
-                    >
-                      <!-- Drop down starts here -->
-                      <small></small>
+                <!-- Table End here -->
 
-                      <!-- Drop down starts here -->
-                    </div>
-                    <div class="modal-footer">
-                      <button
-                        type="button"
-                        class="btn btn-secondary"
-                        data-dismiss="modal"
-                        id="noDeletePlan"
+                <!-- Delete Plan Modal starts here -->
+                <div
+                  class="modal fade"
+                  id="deleteModalCenter"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="deleteModalCenterTitle"
+                  aria-hidden="true"
+                >
+                  <div
+                    class="modal-dialog modal-dialog-centered"
+                    role="document"
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5
+                          class="modal-title"
+                          id="deleteModalCenterTitle"
+                        ></h5>
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                          id="selfClickedButton"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div
+                        class="modal-body signingMessage"
+                        id="deleteModalMessage"
                       >
-                        No
-                      </button>
-                      <button
-                        type="button"
-                        class="btn btn-primary"
-                        id="yesDeletePlan"
-                        onclick="runDeleteFaq()"
-                      >
-                        Yes
-                      </button>
+                        <!-- Drop down starts here -->
+                        <small></small>
+
+                        <!-- Drop down starts here -->
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-secondary"
+                          data-dismiss="modal"
+                          id="noDeletePlan"
+                          onclick="cancelDeleteUser()"
+                        >
+                          No
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-primary"
+                          id="yesDeletePlan"
+                          onclick="runDeleteUser()"
+                        >
+                          Yes
+                        </button>
+                      </div>
                     </div>
+
+                    <!-- Delete Modals Ends here -->
                   </div>
-
-                  <!-- Delete Modals Ends here -->
+                  <!-- END card -->
                 </div>
-                <!-- END card -->
               </div>
             </div>
           </div>
         </div>
+
         <!-- START CONTAINER FLUID -->
         <!-- Footer starts here -->
         <script src="/components/footer.js"></script>
