--- a/sass_80Pages/ticket_response.html
+++ b/sass_80Pages/ticket_response.html
@@ -76,11 +76,11 @@
                         <label>Title</label>
                         <input type="text" class="form-control" disabled id="title">
                       </div>
+
                       <div class="form-group">
-                        <label>Response</label>
-                        <textarea id="response" name="description" rows="7" cols="80">
-                            </textarea>
-                      </div>             
+                        <label for="Response">Response</label>
+                        <textarea class="form-control" id="response" rows="3"></textarea>
+                      </div>        
                       <div class="col-xl-12 mt-4">
                         <button aria-label="" class="btn btn-primary pull-right btn-lg btn-block">Response
                         </button>
